fix sticky footer on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,17 @@ body * {
   perspective: 175px;
 }
 
+/* To have a sticky footer */
+html,
+body {
+  height: 100%;
+}
+body > footer {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 100vh;
+}
+
 a {
   text-decoration: none;
 }
@@ -421,10 +432,6 @@ ul.react-paginate li.disabled a {
     gap: 5px;
   }
   footer {
-    position: sticky;
-    position: -webkit-sticky;
-    bottom: 0;
-    z-index: 10;
     height: 100%;
     font-size: 11px;
   }
